# donky

./: AUTHORS  COPYING  Makefile.am  Makefile.in  PROTOCOL  README  aclocal.m4  autogen.sh  config.h.in  config.h.in~  configure  configure.ac  donky.core
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  output.5  output.7  output.8  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5  traces.6  traces.7  traces.8
data/: Makefile.am  Makefile.in  donky.conf
src/: Makefile.am  Makefile.in  X11.c  c99.c  c99.h  cfg.c  cfg.h  config.c  config.h  daemon.c  daemon.h  default_settings.h  here  lists.c  lists.h  main.c  main.h  mem.c  mem.h  module.c  module.h  net.c  net.h  protocol.c  protocol.h  render.c  render.h  request.c  request.h  text.c  text.h  util.c  util.h  x11.c  x11.h
src/modules/: Makefile.am  Makefile.in  battery.c  cpuinfo.c  date.c  develop.h  diskio.c  eeebl.c  eeepc.c  exec.c  moc.c  mod_utils.c  mod_utils.h  mpd.c  mpdscrob.c  mpdscrob.h  pcpuinfo.c  scpuinfo.c  sysinfo.c  volume.c  weather.c  wifi.c
src/std/: stdbool.h  string.c  string.h
src/std/string/: strlcat.h  strlcpy.h
